--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,7 +1,7 @@
-streamlit <br>
-pandas <br>
-numpy <br>
-scikit-learn <br>
-lightgbm <br>
-joblib <br>
-geopy <br>
+streamlit 
+pandas 
+numpy 
+scikit-learn 
+lightgbm 
+joblib 
+geopy 
